Various quiz creation improvements: - More restrictive types and UI around clue/q answer limits - Commonise pattern of button showing success (/ error) message - Remove form from QuizEditPage, and all the preventDefault calls - Move edit / save / cancel / delete buttons to bottom of question cards - Show feedback (in button) on saving - More detailed question summaries - Show question type even when collapsed - Confirmation on deleting question

--- a/src/QuizEditPage.module.css
+++ b/src/QuizEditPage.module.css
@@ -8,6 +8,13 @@ p.row label {
     width: 25%;
 }
 
+.questionType {
+    composes: subtleText from './colours.module.css';
+    margin-top: 0;
+    font-variant: small-caps;
+    font-size: 0.8em;
+}
+
 .cluePropLabel {
     composes: smallLeftPadding from './layout.module.css';
 }
